--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -125,7 +125,7 @@ jobs:
             ${{ steps.extract_apks.outputs.signed_normal }}
             CHECKSUMS-Sesame-Normal-${{ steps.extract_info.outputs.version }}.${{ env.SHORT_SHA }}-signed.apk.sha256
             CHECKSUMS-Sesame-Compatible-${{ steps.extract_info.outputs.version }}.${{ env.SHORT_SHA }}-signed.apk.sha256
-          tag_name: ${{ steps.extract_info.outputs.version }}
+          tag_name: ${{ steps.extract_info.outputs.version}}
           draft: false
           generate_release_notes: true
           body: |
@@ -136,11 +136,12 @@ jobs:
       - name: Sync Release to Target Repository
         uses: softprops/action-gh-release@v2
         with:
+          token: ${{ secrets.TARGET_REPO_PAT }}  # 确保这里使用正确的 token
           repository: Xposed-Modules-Repo/fansirsqi.xposed.sesame
           name: ${{ github.event.release.tag_name || steps.extract_info.outputs.version }}
           files: |
-            ${{ steps.extract_apks.outputs.signed_normal }}
-            ${{ steps.extract_apks.outputs.signed_compatible }}
+            ${{ steps.sign_normal_apk.outputs.signedFile }}
+            ${{ steps.sign_compatible_apk.outputs.signedFile }}
             CHECKSUMS-Sesame-Normal-${{ steps.extract_info.outputs.version }}.${{ env.SHORT_SHA }}-signed.apk.sha256
             CHECKSUMS-Sesame-Compatible-${{ steps.extract_info.outputs.version }}.${{ env.SHORT_SHA }}-signed.apk.sha256
           token: ${{ secrets.TARGET_REPO_PAT }}
